sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:14: error: '=' expected but ';' found.
var v=0
^